--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "react-resizable-panels": "^3.0.5",
     "react-router-dom": "^7.8.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
