--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^3.0.5",
     "react-router-dom": "^7.8.1",
+    "react-verification-input": "^4.2.2",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.12"
